# pyshimmer

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_cb.py
.github/workflows/: build.yml
conf/udev/: 10-shimmer.rules.example
examples/: bt_api_example.py  dock_example.py
pyshimmer/: __init__.py  device.py  mock_serial.py  serial_base.py  test_util.py  util.py
pyshimmer/bluetooth/: __init__.py  bt_api.py  bt_commands.py  bt_const.py  bt_serial.py
pyshimmer/dev/: __init__.py  base.py  calibration.py  channels.py  exg.py  fw_version.py  revision.py
pyshimmer/dev/revisions/: shimmer3.py
pyshimmer/reader/: __init__.py  binary_reader.py  reader_const.py  shimmer_reader.py
pyshimmer/uart/: dock_api.py  dock_const.py  dock_serial.py
test/: test_device.py  test_serial_base.py  test_util.py
test/bluetooth/: test_bluetooth_api.py  test_bt_commands.py  test_bt_serial.py
test/dev/: test_device_base.py  test_device_calibration.py  test_device_channels.py  test_device_exg.py  test_device_fw_version.py
test/reader/: reader_test_util.py  test_binary_reader.py  test_reader_const.py  test_shimmer_reader.py  test_util.py
test/reader/resources/: pair_consensys.csv
test/uart/: __init__.py  test_dock_api.py  test_dock_serial.py
