# pyshimmer - API for Shimmer sensor devices
# Copyright (C) 2020  Lukas Magel

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm >= 3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshimmer"
authors = [{ name = "Lukas Magel" }]
description = "API for Shimmer sensor devices"
readme = "README.rst"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/seemoo-lab/pyshimmer" }
requires-python = ">= 3.7"
dynamic = ["version"]
dependencies = [
    "pyserial>=3.4",
    "numpy>=1.15",
    "pandas>=1.1.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["pyshimmer*"]

[tool.setuptools_scm]
