# pyshimmer - API for Shimmer sensor devices
# Copyright (C) 2020  Lukas Magel

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = pyshimmer
author = Lukas Magel
license = GPL-3.0-or-later
description = API for Shimmer sensor devices
url = https://github.com/seemoo-lab/pyshimmer
long_description = file: README.rst

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    pyserial>=3.4
    numpy>=1.15
    pandas>=1.1.5

[options.packages.find]
include = pyshimmer*

[options.extras_require]
test =
    pytest
    pytest-cov
